--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -86,3 +86,9 @@ File: Main Css File
 @import "custom/plugins/jstree";
 @import "custom/plugins/google-maps";
 @import "custom/plugins/vector-maps";
+
+.form-control {
+    &.big-form-control {
+        padding: 4rem;
+    }
+}
