--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11361,5 +11361,7 @@ a.text-dark:focus {
   font-weight: 600 !important;
   font-size: 2rem;
   margin-bottom: 2rem;
+  background: #6d798c;
+  color: #ffffff;
 }
 
