--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,7 @@
         font-weight: 600 !important;
         font-size: 2rem;
         margin-bottom: 2rem;
-        background: #6d798c !important;
+        background: lighten($color: #435966, $amount: 10%) !important;
         color: #ffffff !important;
         font-weight: 600;
     }
