--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11361,7 +11361,7 @@ a.text-dark:focus {
   font-weight: 600 !important;
   font-size: 2rem;
   margin-bottom: 2rem;
-  background: #6d798c !important;
+  background: #577485 !important;
   color: #ffffff !important;
   font-weight: 600;
 }
